tests/machine/x/php/match_full.error
string(3) "two"
string(7) "relaxed"
string(9) "confirmed"
string(4) "zero"
PHP Warning:  Undefined variable $_ in /workspace/mochi/tests/machine/x/php/match_full.php on line 28
PHP Fatal error:  Uncaught UnhandledMatchError: Unhandled match case 5 in /workspace/mochi/tests/machine/x/php/match_full.php:28
Stack trace:
#0 /workspace/mochi/tests/machine/x/php/match_full.php(32): classify()
#1 {main}
  thrown in /workspace/mochi/tests/machine/x/php/match_full.php on line 28
